  (6) Moved the fields open, lastchange and icon to state/{open,lastchange,icon}
  (7) Added state/message field which was the former free-text status field
  (8) Made the status icons non-required, because there's no app that
      is really using them and furthermore some spaces use them incorrectly
      because they (haven't|don't want) such icons.
  (9) Moved address to location/address
  (10) Changed events/t to events/timestamp to make that field more clear
  (11) Added contact/issue-mail (optional), an email address where SpaceAPI
       issues can be sent to. The value can be base64-encoded.
  (12) Added issue-report-channels (required), a list of communication channels
       where issues should be reported to. At least one channel must be defined.
  (13) Field projects added which is an array of the project sites.
  (14) Field 'spacefed-auth' added which is a flag denoting if a space is using
       the inter-(hacker)space federated authentication platform.
  (15) Added contact/identica added. This is a micro-blogging platform.
  (16) Added new sensor types and sensor instances now have a given structure.
  (17) Added state/trigger_person
  (18) Added radio_show/{name,url,type,start,end}
  (19) Added contact/foursquare
  (20) Added new sensors. Updated some descriptions.
  (21) Changed the structure of contact/keymasters (as discussed with bitlair)
  (22) Changed the structure of feeds to make the feed types (blog, calendar, ...) explicit
  (23) Added contact/facebook, sensors/{door_locked,network_connections/machines,wind.gust}
  .... stopped to list further changes here, just check the commits

0.12:

  * Added sensors/temp
  * Added feeds/{name,type,url}

0.11:

  * Added icon/{open,closed}
    
0.9:

  * Removed phone
  * Added contact/{phone,sip,keymaster,irc,twitter,email,ml,jabber}
    
0.8:

  * api
  * space
  * logo
  * url
  * address
  * phone
  * lat
  * lon
  * cam
  * stream
  * open
  * status
  * events/{name,type,t,extra}