@@ -45,10 +45,27 @@
                 }
             }
         },
-        "spacefed-auth": {
+        "spacefed": {
             "description": "A flag indicating if the hackerspace uses SpaceFED, a federated login scheme so that visiting hackers can use the space WiFi with their home space credentials.",
             "required": false,
-            "type": "boolean"
+            "type": "object",
+            "properties": {
+                "spacenet": {
+                    "description": "See the <a target=\"_blank\" href=\"https://spacefed.net/wiki/index.php/Category:Howto/Spacenet\">wiki</a>.",
+                    "required": true,
+                    "type": "boolean"
+                },
+                "spacesaml": {
+                    "description": "See the <a target=\"_blank\" href=\"https://spacefed.net/wiki/index.php/Category:Howto/Spacesaml\">wiki</a>.",
+                    "required": true,
+                    "type": "boolean"
+                },
+                "spacephone": {
+                    "description": "See the <a target=\"_blank\" href=\"https://spacefed.net/wiki/index.php/Category:Howto/Spacephone\">wiki</a>.",
+                    "required": true,
+                    "type": "boolean"
+                }
+            }
         },
         "cam": {
             "description": "URL(s) of webcams in your space",
@@ -70,7 +87,7 @@
             "type": "object",
             "properties": {
                 "open": {
-                    "description": "A flag which indicates if the space is currently open or closed. The state 'ndefined' can be achieved by assigning this field the value 'null' (without the quotes). In most (all?) programming languages this is evaluated to false so that no app should break",
+                    "description": "A flag which indicates if the space is currently open or closed. The state 'undefined' can be achieved by assigning this field the value 'null' (without the quotes). In most (all?) programming languages this is evaluated to false so that no app should break",
                     "required": true,
                     "type": "boolean"
                 },
@@ -238,7 +255,7 @@
             }
         },
         "issue-report-channels": {
-            "description": "This array defines all communication channels where you want to get issue reports about your SpaceAPI endpoint. At least one channel must be defined.",
+            "description": "This array defines all communication channels where you want to get issue reports about your SpaceAPI endpoint. At least one channel must be defined. Please consider that when using <samp>ml</samp> the mailing list moderator has to moderate incoming emails or add the sender email to the subscribers. If you don't break your SpaceAPI implementation you won't get any notifications ;-)",
             "required": true,
             "type": "array",
             "items": {
@@ -409,8 +426,8 @@
                                 "enum": ["btl", "crt"]
                             },
                             "location" : {
-                                "description" : "The location of your sensor such as <samp>Outside</samp>, <samp>Inside</samp>, <samp>Ceiling</samp>, <samp>Roof</samp> or <samp>Room 1</samp>.",
-                                "required" : true,
+                                "description" : "The location of your sensor such as <samp>Room 1</samp> or <samp>Room 2</samp> or <samp>Room 3</samp>, <samp>Roof</samp> or <samp>Room 1</samp>.",
+                                "required" : false,
                                 "type" : "string"
                             },
                             "name" : {
@@ -588,12 +605,6 @@
                                 "required" : true,
                                 "type" : "number"
                             },
-                            "unit" : {
-                                "description" : "The unit of the sensor value. You should always define the unit though if the sensor is a flag of a boolean type then you can of course omit it.",
-                                "required" : false,
-                                "type" : "string",
-                                "enum" : ["ncs"]
-                            },
                             "machines": {
                                 "description": "The machines that are currently connected with the network.",
                                 "required": false,
@@ -644,12 +655,6 @@
                                 "required" : true,
                                 "type" : "number"
                             },
-                            "unit" : {
-                                "description" : "",
-                                "required" : false,
-                                "type" : "string",
-                                "enum" : ["ppl"]
-                            },
                             "location" : {
                                 "description" : "Specify the location if your hackerspace has different departments (for whatever reason). This field is for one department. Every department should have its own sensor instance.",
                                 "required" : false,
@@ -679,12 +684,6 @@
                                 "description" : "The amount of present people.",
                                 "required" : true,
                                 "type" : "number"
-                            },
-                            "unit" : {
-                                "description" : "",
-                                "required" : false,
-                                "type" : "string",
-                                "enum" : ["ppl"]
                             },
                             "location" : {
                                 "description" : "If you use multiple sensor instances for different rooms, use this field to indicate the location.",
